[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbompy"
version = "0.0.12"
authors = [
  { name="Federico Boni", email="federicoboni67@example.com" },
]
description = "Sbompy is a Python tool for building sbom files from Python project."
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"docopt",
	"pipreqs",
	"requests"
]
[project.urls]
homepage = "https://github.com/bonifederico/sbompy"
bug_tracker = "https://github.com/bonifederico/sbompy/issues"